implement tutorial suggestions

--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/00.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/00.md
@@ -1,18 +1,17 @@
 ## Web Components
 
-Web Components are a set of web platform APIs that allow you to create new custom, reusable, encapsulated HTML tags to use in web pages and web apps. Custom components and widgets built on the Web Component standards will work across modern browsers and can be used with any JavaScript library or framework that works with HTML.
+Web components are a set of web platform APIs that allow you to create new custom, reusable, encapsulated HTML tags to use in web pages and web apps. Custom components and widgets built on the web component standards will work across modern browsers and can be used with any JavaScript library or framework that works with HTML.
 
 ## Lit
 
-[Lit](https://lit.dev) is a library for creating fast, lightweight Web Components that work in any web page with any framework.
+[Lit](https://lit.dev) is a library for creating fast, lightweight web components that work in any web page with any framework.
 
 Lit provides APIs to simplify common web components tasks like managing properties, attributes, and rendering.
 
 ## What you'll Learn
 
-* What is a Web Component
-* The concepts of Web Components
-* How to build a Web Component
+* What is a web component
+* How to build a web component
 * What is Lit
 * How to build a Lit component
 
@@ -23,8 +22,8 @@ For a more general introduction to Lit, take a look at the <a href="https://lit.
 
 ## What you’ll build
 
-* A vanilla thumbs up / down Web Component
-* A thumbs up / down LitElement-based Web Component
+* A vanilla thumbs up / down web component
+* A thumbs up / down LitElement-based web component
 
 <aside class="positive">
 Already know the basics of web components? Skip to <a href="#09">Lit templates</a>, to see how Lit can help!
