--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/01.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/01.md
@@ -1,6 +1,6 @@
 ## Custom Elements
 
-Web Components are a collection of 4 native web APIs. They are:
+Web components are a collection of 4 native web APIs. They are:
 
 * ES Modules
 * Custom Elements
@@ -11,7 +11,7 @@ You've likely already used the ES modules specification, which allows you to cre
 
 ## Defining a Custom Element
 
-The Custom Elements specification lets users define their own HTML elements using JavaScript. The names must contain a hyphen (`-`) to differentiate them from native browser elements. Clear the `index.js` file and define a custom element class:
+The custom elements specification lets users define their own HTML elements using JavaScript. The names must contain a hyphen (`-`) to differentiate them from native browser elements. Clear the `index.js` file and define a custom element class:
 
 ### index.js
 
@@ -47,10 +47,10 @@ Place a `<rating-element>` in the document body and see what renders.
 </body>
 ```
 
-Now, looking at the output, you'll see that nothing has rendered. This is expected, because you haven't told the browser how to render `<rating-element>`. You can confirm that the Custom Element definition has succeeded by selecting the `<rating-element>` in Chrome Dev Tools' element selector and, in the console, calling:
+Now, looking at the output, you'll see that nothing has rendered. This is expected, because you haven't told the browser how to render `<rating-element>`. You can confirm that the custom element definition has succeeded by right-clicking on the *result preview window*, selecting "inspect" or "inspect element", and checking the constructor of the `<rating-element>` by calling the following expression in the console:
 
 ```text
-$0.constructor
+document.querySelector('rating-element').constructor
 ```
 
 Which should output:
