--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/02.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/02.md
@@ -5,7 +5,13 @@ Custom elements come with a set of lifecycle hooks. In this section you'll use t
 * `constructor`
 * `connectedCallback`
 
-The `constructor` is called when the element is first created: for example, by calling `document.createElement(‘rating-element')` or `new RatingElement()`. The constructor is a good place to set up your element, but it is typically considered bad practice to do DOM manipulations in the constructor for element "boot-up" performance reasons.
+The `constructor` is called when the element is first created: for example, by calling `document.createElement(‘rating-element')` or `new RatingElement()`. The constructor is a good place to set up your element.
+
+<aside class="negative">
+<p>It is considered bad practice to do DOM manipulations in the constructor, because DOM manipulations can slow down initial load times.</p>
+
+<p>Additionally, the browser will throw an error if a custom element definition that manipulates the DOM in the <code>constructor</code> is loaded while the browser is still parsing the document because the parser does not know how to handle changes to the DOM mid-parse. This is common in inline scripts or in a <code>&lt;script></code> that is not <code>type="module"</code></p>
+</aside>
 
 The `connectedCallback` is called when the custom element is attached to the DOM. This is typically where initial DOM manipulations happen.
 
