--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/03.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/03.md
@@ -23,11 +23,11 @@ For example, try putting a style tag in the head of the main document:
 </html>
 ```
 
-Your output should have a red border box around the span for the rating. This is a trivial case, but the lack of DOM encapsulation may result in larger problems for more complex applications. This is where Shadow DOM comes in.
+Your output should have a red border box around the span for the rating. This is a trivial case, but the lack of DOM encapsulation may result in larger problems for more complex applications. This is where shadow DOM comes in.
 
 ## Attaching a Shadow Root
 
-Inside the `connectedCallback`, attach a Shadow Root to the element and render the DOM inside of that root:
+Inside the `connectedCallback`, attach a shadow root to the element and render the DOM inside of that root:
 
 ### index.js
 
@@ -61,7 +61,7 @@ connectedCallback() {
 
 Now the red border box should be gone—the styles in the main document can no longer select the nodes inside the shadow root.
 
-How did you do this? In the `connectedCallback` you called `this.attachShadow` which attaches a shadow root to an element. The `open` mode means that the shadow content is inspectable and makes the shadow root accessible via `this.shadowRoot` as well. Take a look at the Web Component in the Chrome inspector as well:
+How did you do this? In the `connectedCallback` you called `this.attachShadow` which attaches a shadow root to an element. The `open` mode means that the shadow content is inspectable and makes the shadow root accessible via `this.shadowRoot` as well. Take a look at the web component in the Chrome inspector as well:
 
 <img src="/images/tutorials/wc-to-lit/dom-tree.png" alt="The DOM tree in the chrome inspector. There is a <rating-element> with a #shadow-root (open) as it&rsquo;s child, and the DOM from before inside that shadow root.">
 
