--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/04.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/04.md
@@ -79,4 +79,4 @@ To use this `<template>` element:
    * The `true` argument performs a deep clone.
 4. Initialize the dom with the data.
 
-Congratulations, you now have a Web Component! Unfortunately it does not do anything yet, so next, add some functionality.
+Congratulations, you now have a web component! Unfortunately it does not do anything yet, so next, add some functionality.
