--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/06.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/06.md
@@ -1,6 +1,6 @@
 ## Attribute Bindings
 
-Now, update the view when the `rating` attribute changes; this is similar to an input updating its view when you set `<input value="newValue">`. Luckily, the Web Component lifecycle includes the `attributeChangedCallback`. Update the rating by adding the following lines:
+Now, update the view when the `rating` attribute changes; this is similar to an input updating its view when you set `<input value="newValue">`. Luckily, the web component lifecycle includes the `attributeChangedCallback`. Update the rating by adding the following lines:
 
 
 ### index.js
