--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/07.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/07.md
@@ -17,7 +17,7 @@ Now all that's missing is the button functionality. The behavior of this compone
 </style>
 ```
 
-In Shadow DOM the `:host` selector refers to the node or custom element that the Shadow Root is attached to.
+In shadow DOM the `:host` selector refers to the node or custom element that the shadow root is attached to.
 
 In this case, if the `vote` attribute is `"up"` (e.g. `<rating-element vote="up">`) it will turn the thumb-up button green.
 
