--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/08.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/08.md
@@ -91,6 +91,6 @@ In this step you:
 * Clean up these listeners in `disconnectedCallback`
 * Set `this.vote` appropriately in the click listeners themselves
 
-Congratulations, you now have a fully-featured Web Component; try clicking on some buttons!
+Congratulations, you now have a fully-featured web component; try clicking on some buttons!
 
 The issue now is that my JS file is now reaching 103 lines (99 in TS), my HTML file 38 lines, and the code is quite verbose, imperative, and unreadable for such a simple component. This is where Lit comes in!
