--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/09.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/09.md
@@ -6,7 +6,7 @@
 <details>
   <summary>Did you skip here from step 1?</summary>
 
-  In summary, we have built a Web Component that:
+  In summary, we have built a web component that:
 
   * Accepts a `vote="up"` or `vote="down"` attribute
   * Accepts a `rating="0"` attribute
@@ -32,7 +32,7 @@ You can learn about more Lit's templating features that we will not cover (such 
 
 ## Using Lit templates
 
-Next, migrate the native Web Component `<rating-element>` to use a Lit template. Lit uses [*Tagged Template Literals*](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Template_literals#tagged_templates) – functions that take template strings as arguments with a special syntax.
+Next, migrate the native web component `<rating-element>` to use a Lit template. Lit uses [*Tagged Template Literals*](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Template_literals#tagged_templates) – functions that take template strings as arguments with a special syntax.
 
 Lit then uses `<template>` elements under the hood to provide fast rendering as well as providing some sanitization features for security.
 
