--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/10.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/10.md
@@ -119,7 +119,7 @@ set vote(newValue) {
 {% endswitchable-sample %}
 
 <aside class="warning">
-Note, this is not the most-efficient way of writing this, but its complexity is meant to exemplify features of the Web Component and Lit lifecycle.
+Note, this is not the most-efficient way of writing this, but its complexity is meant to exemplify features of the web component and Lit lifecycle.
 </aside>
 
 Here, you:
