--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/11.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/11.md
@@ -8,7 +8,7 @@ We still have some problems with our code:
 
 This is where `LitElement` comes in!
 
-`LitElement` is Lit's base class for creating fast, lightweight Web Components that can be used across frameworks and environments. Next, take a look at what `LitElement` can do for us in the `<rating-element>`!
+`LitElement` is Lit's base class for creating fast, lightweight web components that can be used across frameworks and environments. Next, take a look at what `LitElement` can do for us in the `<rating-element>`!
 
 ## Defining A LitElement
 
@@ -117,7 +117,7 @@ export class RatingElement extends LitElement {
 
 This is where most styles live in Lit.
 
-Lit will take these styles and use browser features such as [*Constructable Stylesheets*](https://developers.google.com/web/updates/2019/02/constructable-stylesheets) to provide faster rendering times as well as pass it through the Web Components polyfill on older browsers if necessary.
+Lit will take these styles and use browser features such as [*Constructable Stylesheets*](https://developers.google.com/web/updates/2019/02/constructable-stylesheets) to provide faster rendering times as well as pass it through the web components polyfill on older browsers if necessary.
 
 ## Render
 
