--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/12.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/12.md
@@ -6,7 +6,7 @@
 
 ## Reactive Properties
 
-Lit introduces a set of render lifecycle callback methods on top of the native Web Component callbacks. These callbacks are triggered when declared Lit reactive properties are changed.
+Lit introduces a set of render lifecycle callback methods on top of the native web component callbacks. These callbacks are triggered when declared Lit reactive properties are changed.
 
 <aside class="info">
 To learn more about the Lit rendering lifecycle, please visit the <a href="https://lit.dev/docs/components/lifecycle/">Lit docs' lifecycle section</a>.
@@ -83,7 +83,7 @@ document.querySelector(‘user-profile').user = this.user;
 <user-profile .user=${this.user}></user-profile>
 ```
 
-  Even better practice is to spread out the object onto the Web Component declaratively. E.g.
+  Even better practice is to spread out the object onto the web component declaratively. E.g.
 
 ```html
 <user-profile .name=${this.user.name} .age=${this.user.age}>
