--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/13.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/13.md
@@ -1,8 +1,8 @@
 ## Congratulations!
 
-You've built a "vanilla" Web Component and converted it to a Lit-based Web Component!
+You've built a "vanilla" web component and converted it to a Lit-based web component!
 
-We've been able to convert an unreadable 93-line vanilla web component with a 43-line html template to a 68-line Lit-based Web Component template-and-all! (JS: 104 + 43 lines to 75 lines)
+We've been able to convert an unreadable 93-line vanilla web component with a 43-line html template to a 68-line Lit-based web component template-and-all! (JS: 104 + 43 lines to 75 lines)
 
 ## What's Does lit-html Do again?
 
@@ -16,7 +16,7 @@ We've been able to convert an unreadable 93-line vanilla web component with a 43
 
 ## What does LitElement do again?
 
-`LitElement`, Lit's Web Component base class does the following:
+`LitElement`, Lit's web component base class does the following:
 
 * Handles converting attributes to properties
 * Handles reflecting properties back into attributes
@@ -34,10 +34,10 @@ You might enjoy our [Lit for React Developers Codelab](https://codelabs.develope
 
 * [The Lit Docs](https://lit.dev/docs/)
 * [Open Web Components](https://open-wc.org/) - A community run guidance and tooling community
-* [WebComponents.dev](https://webcomponents.dev/) - Create a Web Component in all known frameworks
+* [WebComponents.dev](https://webcomponents.dev/) - Create a web component in all known frameworks
 
 ### Community
 
-* [Lit and Friends Slack](https://lit.dev/slack-invite) - The largest Web Components community
+* [Lit and Friends Slack](https://lit.dev/slack-invite) - The largest web components community
 * [@buildWithLit on Twitter](https://twitter.com/buildWithLit) - The Twitter account of the team that made Lit
-* [Web Components SF](https://twitter.com/WebComponentsSF) - A Web Components meetup for San Francisco
+* [Web Components SF](https://twitter.com/WebComponentsSF) - A web components meetup for San Francisco
