tutorial rename index.js to rating-element.(ts|js)

--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/01.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/01.md
@@ -11,9 +11,9 @@ You've likely already used the ES modules specification, which allows you to cre
 
 ## Defining a Custom Element
 
-The custom elements specification lets users define their own HTML elements using JavaScript. The names must contain a hyphen (`-`) to differentiate them from native browser elements. Clear the `index.js` file and define a custom element class:
+The custom elements specification lets users define their own HTML elements using JavaScript. The names must contain a hyphen (`-`) to differentiate them from native browser elements. Clear the `rating-element.<litdev-code-language-display></litdev-code-language-display>` file and define a custom element class:
 
-### index.js
+### rating-element.<litdev-code-language-display></litdev-code-language-display>
 
 {% switchable-sample %}
 
