--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/03.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/03.md
@@ -10,7 +10,7 @@ For example, try putting a style tag in the head of the main document:
 <!DOCTYPE html>
 <html>
  <head>
-   <script src="./index.js" type="module"></script>
+   <script src="./rating-element.js" type="module"></script>
    <style>
      span {
        border: 1px solid red;
@@ -29,7 +29,7 @@ Your output should have a red border box around the span for the rating. This is
 
 Inside the `connectedCallback`, attach a shadow root to the element and render the DOM inside of that root:
 
-### index.js
+### rating-element.<litdev-code-language-display></litdev-code-language-display>
 
 ```js
 connectedCallback() {
