--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/04.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/04.md
@@ -43,7 +43,7 @@ Next, transition the component to use HTML Templates:
 
 Here you moved the DOM content into a `<template>` tag in the main document's DOM. Now refactor the custom element definition:
 
-### index.js
+### rating-element.<litdev-code-language-display></litdev-code-language-display>
 
 {% switchable-sample %}
 
