--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/08.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/08.md
@@ -2,7 +2,7 @@
 
 And now finally, add some click event listeners to give the buttons functionality!
 
-### index.js
+### rating-element.<litdev-code-language-display></litdev-code-language-display>
 
 {% switchable-sample %}
 
