--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/09.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/09.md
@@ -143,7 +143,7 @@ Additionally, you call the lit render method which synchronously renders the tem
 Now, call `this.render()` in the `connectedCallback` and remove the logic related to inserting the template:
 
 
-### index.js
+### rating-element.<litdev-code-language-display></litdev-code-language-display>
 
 {% switchable-sample %}
 
