--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/10.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/10.md
@@ -2,7 +2,7 @@
 
 Now that you have gotten rid of the `<template>` element in `index.html`, refactor the code to take advantage of `lit-html`s features in the newly-defined `render` method. You can start by leveraging Lit's event listener binding syntax:
 
-### index.js
+### rating-element.<litdev-code-language-display></litdev-code-language-display>
 
 ```html
 <button
@@ -27,7 +27,7 @@ Next:
 * Remove `disconnectedCallback`
 * Remove the `_on[Up|Down]Click` methods
 
-### index.js
+### rating-element.<litdev-code-language-display></litdev-code-language-display>
 
 {% switchable-sample %}
 
@@ -74,7 +74,7 @@ What did we achieve? You were able to remove:
 
 Finally, update the property setters to utilize the `render` method so that the DOM can update when either the properties or attributes change:
 
-### index.js
+### rating-element.<litdev-code-language-display></litdev-code-language-display>
 
 {% switchable-sample %}
 
