--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/11.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/11.md
@@ -14,7 +14,7 @@ This is where `LitElement` comes in!
 
 Start by importing and subclassing the `LitElement` base class from the `lit` package and in TS, use the `@customElement` decorator to replace the `customElements.define` call:
 
-### index.js
+### rating-element.<litdev-code-language-display></litdev-code-language-display>
 
 {% switchable-sample %}
 
@@ -57,7 +57,7 @@ For a comprehensive list of styling features, please visit the <a href="https://
 
 Next, move the styles from the render method to Lit's static stylesheet:
 
-### index.js
+### rating-element.<litdev-code-language-display></litdev-code-language-display>
 
 {% switchable-sample %}
 
@@ -123,7 +123,7 @@ Lit will take these styles and use browser features such as [*Constructable Styl
 
 Next, `render` is a `LitElement` lifecycle method which requires us to **return** a Lit template and no longer needs to check for the shadow root:
 
-### index.js
+### rating-element.<litdev-code-language-display></litdev-code-language-display>
 
 {% switchable-sample %}
 
