--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/12.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/12.md
@@ -14,7 +14,7 @@ To learn more about the Lit rendering lifecycle, please visit the <a href="https
 
 To use this feature, you must statically declare which properties are *Reactive Properties* – properties that will trigger the render lifecycle when changed:
 
-### index.js
+### rating-element.<litdev-code-language-display></litdev-code-language-display>
 
 {% switchable-sample %}
 
@@ -103,7 +103,7 @@ Additionally, the `reflect` flag on the `vote` property will automatically updat
 
 Now update the `rating` when the `vote` property changes in the `willUpdate` Lit lifecycle method:
 
-### index.js
+### rating-element.<litdev-code-language-display></litdev-code-language-display>
 
 {% switchable-sample %}
 
