Second draft of attribute converters tutorial

--- a/packages/lit-dev-content/site/tutorials/content/custom-attribute-converter/00.md
+++ b/packages/lit-dev-content/site/tutorials/content/custom-attribute-converter/00.md
@@ -10,7 +10,9 @@ Lit will automatically convert any given attributes into properties, but some pr
 
 ## What you'll build
 
-In this tutorial you will build your own custom attribute converter that can convert a date-string attribute into a Javascript Date object property and vice versa.
+In this tutorial you will build a component that takes in a human-readable date-string, converts to a Javascript Date object, and displays the given date in a human readable manner.
+
+You will do this with the default attribute converters and then upgrade your component with your own custom attribute converter that can convert a date-string attribute into a Javascript Date object property and vice versa.
 
 ## Previous knowledge
 
