--- a/packages/lit-dev-content/site/tutorials/content/custom-attribute-converter/01.md
+++ b/packages/lit-dev-content/site/tutorials/content/custom-attribute-converter/01.md
@@ -2,7 +2,7 @@ In this example:
 
 - `my-component` is a Lit component that:
   - Has a `date` reactive property of type `Date`
-  - Has attribute to property conversion turned off (`{attribute: false}`)
+  - Has attribute to property conversion turned off `{attribute: false}`
   - Displays out the given `date` in a human-readable-format
 - `index.html` passes the the date `05/05/22` to `my-element` as a `Date` object via property
 
@@ -12,22 +12,66 @@ The reason we have turned off attribute conversion is because Lit does not know 
 
 </aside>
 
-## Goal
+## Attribute Converters
 
-* Accept a human-readable attribute as a reactive property
-* Convert the attribute to a Javascript Date object
-* Display the Date in a human-readable format
+Attribute converters tell Lit how to convert an attribute to a property and vice versa in the case that a reactive property has the `reflect: true` flag.
 
-### Accept a human-readable attribute string as a property
+### Built-in Attribute Converters
 
-* Declare `dateStr` reactive property
-* Set the default value to the stringified current date
-* Set the attribute for that property `date-str`
+Lit has several built-in attribute converters that are detected automatically via the `type` property of the [reactive property options](/docs/components/properties/#property-options). The built-in converters are:
+
+<details>
+<summary><code>String</code></summary>
+
+- to attribute: `setAttribute`
+- from attribute: `getAttribute`
+
+</details>
+<details>
+<summary><code>Boolean</code></summary>
+
+- to attribute: `toggleAttribute`
+- from attribute: `hasAttribute`
+
+<aside class="warning">
+
+This means that `<my-element prop="false">` will be converted to `true`.
+
+</aside>
+
+</details>
+<details>
+<summary><code>Number</code></summary>
+
+- to attribute: stingification and `setAttribute`
+- from attribute: `getAttribute` and `Number`
+
+</details>
+<details>
+<summary><code>Array|Object</code></summary>
+
+- to attribute: `setAttribute` and `JSON.stringify`
+- from attribute: `JSON.parse`
+
+</details>
+
+## Goal for this step
+
+`my-element` accepts human-readable date attribute as a reactive property. e.g. `date-str="05/05/22"`
+
+### Accept a human-readable attribute string
+
+* Declare `dateStr` reactive property of type `String`
+* Set the default value to the stringified value of `date`
+* Set the attribute for `dateStr` to be `date-str`
 
 {% switchable-sample %}
 
 ```ts
 export class MyElement extends LitElement {
+  @property({attribute: false})
+  date = new Date();
+
   @property({type: String, attribute: 'date-str'})
   dateStr = (new Date()).toString();
   ...
@@ -36,72 +80,18 @@ export class MyElement extends LitElement {
 ```js
 export class MyElement extends LitElement {
   static properties = {
-    dateStr: {type: String, attribute: 'date-str'},
     date: {attribute: false},
+    dateStr: {type: String, attribute: 'date-str'},
   };
 
   constructor() {
     super();
-    this.dateStr = new Date().toString();
     this.date = new Date(this.dateStr);
+    this.dateStr = new Date().toString();
   }
   ...
 ```
 
 {% endswitchable-sample %}
 
-### Convert the attribute to a Javascript Date object & display
-
-* On each change convert the `dateStr` to a JS `Date` object
-* Update the `date` property to reflect the new Date so that it can be displayed
-
-<aside class="info">
-
-The `willUpdate` method is a good place to reconcile two different reactive properties. Read more on the Lit lifecycle here!
-
-</aside>
-
-#### my-element
-
-{% switchable-sample %}
-
-```ts
-export class MyElement extends LitElement {
-  ...
-
-  willUpdate(changed: PropertyValues<this>) {
-    if (changed.has('dateStr') && this.dateStr) {
-      this.date = new Date(this.dateStr);
-    }
-  }
-
-  ...
-```
-
-```js
-export class MyElement extends LitElement {
-  ...
-
-  willUpdate(changed) {
-    if (changed.has('dateStr') && this.dateStr) {
-      this.date = new Date(this.dateStr);
-    }
-  }
-
-  ...
-```
-
-{% endswitchable-sample %}
-
-### Accept the human readable date as an attribute
-
-* Stop passing `date` as a property to `my-element`
-* Pass `05/05/22` as an attribute to `my-element`
-
-#### index.html
-
-```html
-<body>
-  <my-element date-str="05/05/22"></my-element>
-</body>
-```
+Now setting `date-str` to `05/05/22` will update the `dateStr` property to `05/05/22` because the built-in `String` attribute converter is used!
