--- a/packages/lit-dev-content/site/tutorials/content/custom-attribute-converter/02.md
+++ b/packages/lit-dev-content/site/tutorials/content/custom-attribute-converter/02.md
@@ -1,154 +1,65 @@
-The current implementation is not great:
+In `index.html`, `<my-element>`'s `date` property is still being set as a property. Which is not ideal for users of our component because setting properties on an element is not as intuitive or accessible setting attributes.
 
-- There is an unneccessary input of `dateStr` that only has the job to accept a string
-- The code around `willUpdate` is a bit messy and imperative
+### Accept `date-str` as an attribute
 
-The reason for all of these negatives is simply because Lit does not know how to convert a `string` to a `Date` object. This is where Lit attribute converters come in!
-
-## Attribute Converters
-
-Attribute converters tell Lit how to convert an attribute to a property and vice versa in the case that a reactive property has the `reflect: true` flag.
-
-### Built-in Attribute Converters
-
-Lit has several built-in attribute converters that are detected automatically via the `type` property of the [reactive property options](/docs/components/properties/#property-options). The built-in converters are:
-
-- `String`
-  - to attribute: `setAttribute`
-  - from attribute: `getAttribute`
-- `Boolean`
-  - to attribute: `toggleAttribute`
-  - from attribute: `hasAttribute`
-- `Number`
-  - to attribute: stingification and `setAttribute`
-  - from attribute: `getAttribute` and `Number`
-- `Array|Object`
-  - to attribute: `setAttribute` and `JSON.stringify`
-  - from attribute: `JSON.parse`
-
-## Complex Attribute Converter
-
-Now define a complex attribute converter that can convert a date-string attribute into a Javascript Date object property and vice versa.
-
-### Creating the Complex Attribute Converter
-
-* Create a file called `date-converter.ts` (or `js`)
-* Export a variable `dateConverter`
-* Define `dateConverter` with the following methods:
-  * `toAttribute`: a function that takes a `Date` and returns a string
-  * `fromAttribtue`: a function that takes a string and returns a `Date`
-
-#### date-converter
-
-{% switchable-sample %}
-
-```ts
-import {ComplexAttributeConverter} from 'lit';
-
-export const dateConverter: ComplexAttributeConverter<Date> = {
-  toAttribute: (date: Date) => {
-    return date.toString();
-  },
-  fromAttribute: (value: string) => {
-    return new Date(value);
-  }
-};
-```
-
-```js
-export const dateConverter = {
-  toAttribute: (date) => {
-    return date.toString();
-  },
-  fromAttribute: (value) => {
-    return new Date(value);
-  },
-};
-```
-
-{% endswitchable-sample %}
-
-### Use the converter
-
-- import the `dateConverter`
-- set `date`'s `converter` reactive property option to `dateConverter`
-- enable attribute conversion for `date`
-
-#### my-element
-
-{% switchable-sample %}
-
-```ts
-import {dateConverter} from './date-converter.js';
-
-export class MyElement extends LitElement {
-  ...
-
-  @property({converter: dateConverter})
-  date = new Date();
-  ...
-```
-
-```js
-import {dateConverter} from './date-converter.js';
-
-export class MyElement extends LitElement {
-  static properties = {
-    dateStr: {type: String, attribute: 'date-str'},
-    date: {attribute: false},
-  };
-  ...
-```
-
-{% endswitchable-sample %}
-
-### Clean up references to `dateStr`
-
-- Remove the `dateStr` property
-- Delete the `willUpdate` method
-  - We no longer need to synchonrize `dateStr` with `date`
-- Update  `index.html` to use the `date` attribute instead
-
-#### my-element
-
-{% switchable-sample %}
-
-```ts
-export class MyElement extends LitElement {
-  @property({converter: dateConverter})
-  date = new Date();
-
-  render() {
-    return html`
-      <p>The given date is: ${this.date.toLocaleDateString()}</p>
-    `;
-  }
-}
-```
-
-```js
-export class MyElement extends LitElement {
-  static properties = {
-    date: {converter: dateConverter},
-  };
-
-  constructor() {
-    super();
-    this.date = new Date();
-  }
-
-  render() {
-    return html`
-      <p>The given date is: ${this.date.toLocaleDateString()}</p>
-    `;
-  }
-}
-```
-
-{% endswitchable-sample %}
+* Stop passing `date` as a property to `my-element`
+* Pass `05/05/22` as an attribute to `my-element`
 
 #### index.html
 
 ```html
-<my-element date="05/05/22"></my-element>
+<body>
+  <my-element date-str="05/05/22"></my-element>
+</body>
 ```
+
+Now you may notice that the date displayed is not the same as the one you passed in. This is because the `date` property is being rendered. `date` needs to be synchonized with `dateStr` whenever `dateStr` changes.
+
+## Goal for this step
+
+Synchronize `date` with `dateStr` whenever `dateStr` changes.
+
+### Update `date` when `dateStr` changes
+
+* On each change convert the `dateStr` to a JS `Date` object
+* Update the `date` property to reflect the user-defined date so that it can be displayed
+
+<aside class="info">
+
+The `willUpdate` method is a good place to reconcile two different reactive properties. Read more on the Lit lifecycle [here](/docs/components/lifecycle/)!
+
+</aside>
+
+#### my-element.(ts|js)
+
+{% switchable-sample %}
+
+```ts
+export class MyElement extends LitElement {
+  ...
+
+  willUpdate(changed: PropertyValues<this>) {
+    if (changed.has('dateStr') && this.dateStr) {
+      this.date = new Date(this.dateStr);
+    }
+  }
+
+  ...
+```
+
+```js
+export class MyElement extends LitElement {
+  ...
+
+  willUpdate(changed) {
+    if (changed.has('dateStr') && this.dateStr) {
+      this.date = new Date(this.dateStr);
+    }
+  }
+
+  ...
+```
+
+{% endswitchable-sample %}
+
+Now the correct date should be displayed when the `date-str` attribute changes!
