clean up and add accurate time

--- a/packages/lit-dev-content/site/tutorials/content/custom-attribute-converter/00.md
+++ b/packages/lit-dev-content/site/tutorials/content/custom-attribute-converter/00.md
@@ -1,6 +1,8 @@
-Web Components can receive data in many ways, but one of the most commmon ways is to use an attribute because they are declarative, static, and easy to write and read.
+Web Components can receive data in many ways, but one of the most commmon ways is to use an attribute because attributes are declarative, static, and easy to read & write.
 
 Lit will automatically convert any given attributes into properties, but some properties will not map easily to an attribute making it difficult to write the attribute.
+
+Custom attribute converters address this problem.
 
 ## What you'll learn
 
