--- a/packages/lit-dev-content/site/tutorials/content/custom-attribute-converter/01.md
+++ b/packages/lit-dev-content/site/tutorials/content/custom-attribute-converter/01.md
@@ -1,6 +1,6 @@
 In this example:
 
-- `my-component` is a Lit component that:
+- `my-element` is a Lit component that:
   - Has a `date` reactive property of type `Date`
   - Has attribute to property conversion turned off `{attribute: false}`
   - Displays out the given `date` in a human-readable-format
@@ -73,7 +73,7 @@ export class MyElement extends LitElement {
   date = new Date();
 
   @property({type: String, attribute: 'date-str'})
-  dateStr = (new Date()).toString();
+  dateStr = this.date.toString();
   ...
 ```
 
@@ -86,12 +86,12 @@ export class MyElement extends LitElement {
 
   constructor() {
     super();
-    this.date = new Date(this.dateStr);
-    this.dateStr = new Date().toString();
+    this.date = new Date();
+    this.dateStr = this.date.toString();
   }
   ...
 ```
 
 {% endswitchable-sample %}
 
-Now setting `date-str` to `05/05/22` will update the `dateStr` property to `05/05/22` because the built-in `String` attribute converter is used!
+Now setting the `date-str` attribute to `05/05/22` will update the `dateStr` property to `05/05/22` because the built-in `String` attribute converter is used!
