--- a/packages/lit-dev-content/site/tutorials/content/custom-attribute-converter/02.md
+++ b/packages/lit-dev-content/site/tutorials/content/custom-attribute-converter/02.md
@@ -24,7 +24,7 @@ Synchronize `date` with `dateStr` whenever `dateStr` changes.
 * On each change convert the `dateStr` to a JS `Date` object
 * Update the `date` property to reflect the user-defined date so that it can be displayed
 
-<aside class="info">
+<aside class="positive">
 
 The `willUpdate` method is a good place to reconcile two different reactive properties. Read more on the Lit lifecycle [here](/docs/components/lifecycle/)!
 
