--- a/packages/lit-dev-content/site/tutorials/content/custom-attribute-converter/03.md
+++ b/packages/lit-dev-content/site/tutorials/content/custom-attribute-converter/03.md
@@ -4,13 +4,13 @@ The current implementation is not great:
 - The code around `willUpdate` is a bit messy and imperative
 - If the user sets `date` to a new date, the `dateStr` will not be updated
 
-The cause of these issues is that Lit does not know how to convert a `string` to a `Date` object. This is where Lit attribute converters come in!
+The root cause of these issues is that Lit does not know how to convert a `string` attribute to a `Date` object property. This is where Lit attribute converters come in!
 
 ## Complex Attribute Converter
 
 Lit provides a way to provide your own custom attribute converters for more complex data structures.
 
-In this example, a complex custom attribute converter can clean up the implementation of `my-element` by providing a means to convert a `string` to a `Date` object.
+In this example, a complex custom attribute converter can clean up the implementation of `my-element` by providing a means to convert a `string` attribute to a `Date` object property.
 
 ## Goal for this step
 
