--- a/packages/lit-dev-content/site/tutorials/content/custom-attribute-converter/04.md
+++ b/packages/lit-dev-content/site/tutorials/content/custom-attribute-converter/04.md
@@ -26,8 +26,8 @@ import {dateConverter} from './date-converter.js';
 
 export class MyElement extends LitElement {
   static properties = {
+    date: {converter: dateConverter},
     dateStr: {type: String, attribute: 'date-str'},
-    date: {attribute: false},
   };
   ...
 ```
